--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,6 +3,7 @@ filter:
   - tests/
   dependency_paths:
   - vendor/
+  - node_modules/
 
 checks:
   php:
@@ -15,7 +16,6 @@ build_failure_conditions:
 
 build:
   environment:
-    node: '9.4.0'
     mysql: false
     postgresql: false
     mongodb: false
@@ -26,8 +26,6 @@ build:
     rabbitmq: false
 
   dependencies:
-    before:
-    - npm install istanbul mocha chai
     override:
     - composer update --no-interaction
 
@@ -37,12 +35,21 @@ build:
       coverage:
         file: 'clover-file'
         format: 'clover'
-    - command: 'NODE_ENV=development ./node_modules/.bin/istanbul cover --report clover ./node_modules/.bin/_mocha -- ./js-tests/*-test.js'
-      coverage:
-        file: 'coverage/clover.xml'
-        format: 'clover'
 
   nodes:
+    js:
+      environment:
+        node: '9.4.0'
+      dependencies:
+        override:
+        - npm install istanbul mocha chai
+      tests:
+        override:
+        - command: 'NODE_ENV=development ./node_modules/.bin/istanbul cover --report clover ./node_modules/.bin/_mocha -- ./js-tests/*-test.js'
+          coverage:
+            file: 'coverage/clover.xml'
+            format: 'clover'
+
     php70-lowest:
       environment:
         php: 7.0
@@ -61,6 +68,14 @@ build:
         override:
         - composer update --no-interaction --prefer-lowest
 
+    php71-laravel56:
+      environment:
+        php: 7.1
+      dependencies:
+        override:
+        - php -r "\$c=json_decode(file_get_contents(\$f='./composer.json'),true);\$c['require-dev']['laravel/framework']='5.6.*';file_put_contents(\$f,json_encode(\$c));";
+        - composer update --no-interaction
+
     php71:
       environment:
         php: 7.1
@@ -72,11 +87,22 @@ build:
         override:
         - composer update --no-interaction --prefer-lowest
 
+    php72-laravel56:
+      environment:
+        php: 7.2
+      dependencies:
+        override:
+        - php -r "\$c=json_decode(file_get_contents(\$f='./composer.json'),true);\$c['require-dev']['laravel/framework']='5.6.*';file_put_contents(\$f,json_encode(\$c));";
+        - composer update --no-interaction
+
     php72:
       environment:
         php: 7.2
 
     analysis:
+      project_setup:
+        override: true
       tests:
         override:
         - php-scrutinizer-run --enable-security-analysis
+        - js-scrutinizer-run
