--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "AvtoDev\\BackendToFrontendVariablesStack\\Tests\\": "tests"
+            "AvtoDev\\BackendToFrontendVariablesStack\\Tests\\": "tests/php"
         }
     },
     "support": {
