--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
         "mocha": "^5.2.0"
     },
     "scripts": {
-        "test": "istanbul cover _mocha ./js-tests/*-test.js"
+        "test": "istanbul cover _mocha ./tests/js/*-test.js"
     }
 }
