--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0 <7.3",
+        "php": ">=7.0",
         "ext-json": "*",
         "ext-mbstring": "*",
         "illuminate/support": ">=5.3.0 <5.8.0",
