--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,4 +1,3 @@
-
 preset: laravel
 
 enabled:
@@ -22,3 +21,4 @@ enabled:
 disabled:
 - unalign_equals
 - concat_without_spaces
+- declare_equal_normalize
