--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -11,8 +11,7 @@ checks:
     duplication: true
 
 build_failure_conditions:
-- 'elements.rating(<= D).exists'                                # No classes/methods with a rating of D or worse
-- 'project.metric_change("scrutinizer.test_coverage", < -0.07)' # Coverage decreased from prev. inspection > 7%
+- 'elements.rating(<= D).exists' # No classes/methods with a rating of D or worse
 
 build:
   environment:
@@ -28,77 +27,9 @@ build:
   dependencies:
     override:
     - composer update --no-interaction
-
-  tests:
-    override:
-    - command: 'vendor/bin/phpunit --coverage-clover=clover-file'
-      coverage:
-        file: 'clover-file'
-        format: 'clover'
+    - npm install
 
   nodes:
-    js:
-      environment:
-        node: '9.4.0'
-      dependencies:
-        override:
-        - npm install istanbul mocha chai
-      tests:
-        override:
-        - command: 'NODE_ENV=development ./node_modules/.bin/istanbul cover --report clover ./node_modules/.bin/_mocha -- ./tests/js/*-test.js'
-          coverage:
-            file: 'coverage/clover.xml'
-            format: 'clover'
-
-    php70-lowest:
-      environment:
-        php: 7.0
-      dependencies:
-        override:
-        - composer update --no-interaction --prefer-lowest
-
-    php70:
-      environment:
-        php: 7.0
-
-    php71-lowest:
-      environment:
-        php: 7.1
-      dependencies:
-        override:
-        - composer update --no-interaction --prefer-lowest
-
-    php71-laravel56:
-      environment:
-        php: 7.1
-      dependencies:
-        override:
-        - php -r "\$c=json_decode(file_get_contents(\$f='./composer.json'),true);\$c['require-dev']['laravel/framework']='5.6.*';file_put_contents(\$f,json_encode(\$c));";
-        - composer update --no-interaction
-
-    php71:
-      environment:
-        php: 7.1
-
-    php72-lowest:
-      environment:
-        php: 7.2
-      dependencies:
-        override:
-        - composer update --no-interaction --prefer-lowest
-
-    php72-laravel56:
-      environment:
-        php: 7.2
-      dependencies:
-        override:
-        - php -r "\$c=json_decode(file_get_contents(\$f='./composer.json'),true);\$c['require-dev']['laravel/framework']='5.6.*';file_put_contents(\$f,json_encode(\$c));";
-        - composer update --no-interaction
-
-    php72:
-      environment:
-        php: 7.2
-
     analysis:
       project_setup:
         override: true
