--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,22 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1.3",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": ">=5.3.0 <5.8.0",
+        "illuminate/support": ">=5.5.0 <5.9.0",
+        "illuminate/view": ">=5.5.0 <5.9.0",
+        "illuminate/container": ">=5.5.0 <5.9.0",
+        "illuminate/config": ">=5.5.0 <5.9.0",
         "tarampampam/wrappers-php": "^1.3"
     },
     "require-dev": {
-        "laravel/laravel": ">=5.3.0 <5.8.0",
+        "laravel/laravel": ">=5.5.0 <5.9.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^6.5 || ~7.0 <7.5.0",
         "symfony/var-dumper": "~3.2 || ^4.0",
-        "avto-dev/dev-tools": "^1.7"
+        "avto-dev/dev-tools": "^1.7",
+        "phpstan/phpstan": "^0.11.3",
+        "phpunit/phpunit": "^6.4 || ~7.5"
     },
     "autoload": {
         "psr-4": {
@@ -38,13 +42,22 @@
         "source": "https://github.com/avto-dev/back2front-laravel"
     },
     "scripts": {
-        "test": "@php ./vendor/bin/phpunit --no-coverage",
-        "test-cover": "@php ./vendor/bin/phpunit --coverage-html='./coverage/html'"
+        "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
+        "phpunit-cover": "@php ./vendor/bin/phpunit --coverage-html='./coverage/html'",
+        "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
+        "test": [
+            "@phpstan",
+            "@phpunit"
+        ],
+        "test-cover": [
+            "@phpstan",
+            "@phpunit-cover"
+        ]
     },
     "extra": {
         "laravel": {
             "providers": [
-                "AvtoDev\\BackendToFrontendVariablesStack\\StackServiceProvider"
+                "AvtoDev\\BackendToFrontendVariablesStack\\ServiceProvider"
             ]
         }
     },
