--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,9 +23,9 @@
         </whitelist>
     </filter>
     <logging>
-        <!--log type="coverage-html" target="./coverage/html"/-->
-        <log type="coverage-xml" target="./coverage/xml"/>
-        <log type="coverage-clover" target="./coverage/clover.xml"/>
+        <!--log type="coverage-html" target="./coverage/php/html"/-->
+        <log type="coverage-xml" target="./coverage/php/xml"/>
+        <log type="coverage-clover" target="./coverage/php/clover.xml"/>
         <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
     </logging>
 </phpunit>
