--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
     },
     "autoload": {
         "psr-4": {
-            "AvtoDev\\BackendToFrontendVariablesStack\\": "src"
+            "AvtoDev\\Back2Front\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "AvtoDev\\BackendToFrontendVariablesStack\\Tests\\": "tests/php"
+            "AvtoDev\\Back2Front\\Tests\\": "tests/php"
         }
     },
     "support": {
@@ -43,7 +43,7 @@
     },
     "scripts": {
         "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
-        "phpunit-cover": "@php ./vendor/bin/phpunit --coverage-html='./coverage/html'",
+        "phpunit-cover": "@php ./vendor/bin/phpunit --coverage-html='./coverage/php/html'",
         "phpstan": "@php ./vendor/bin/phpstan analyze -c ./phpstan.neon.dist --no-progress --ansi",
         "test": [
             "@phpstan",
@@ -57,7 +57,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "AvtoDev\\BackendToFrontendVariablesStack\\ServiceProvider"
+                "AvtoDev\\Back2Front\\ServiceProvider"
             ]
         }
     },
