--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
         "url": "git@github.com:avto-dev/back2front-laravel.git"
     },
     "license": "MIT",
+    "contributors": [
+        {
+            "name": "Dmitriy Ruppel",
+            "url": "https://github.com/DmitriyRuppel"
+        }
+    ],
     "devDependencies": {
         "chai": "^4.1.2",
         "istanbul": "^0.4.5",
         "mocha": "^5.2.0"
     },
     "scripts": {
-        "test": "./node_modules/.bin/istanbul cover --report clover ./node_modules/.bin/_mocha -- ./tests/js/*-test.js"
+        "test": "./node_modules/.bin/istanbul test ./node_modules/.bin/_mocha -- ./tests/js/*-test.js",
+        "test-cover": "./node_modules/.bin/istanbul cover --report clover ./node_modules/.bin/_mocha --dir ./coverage/js -- ./tests/js/*-test.js"
     }
 }
