--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,14 @@
         "php": ">=7.1.3",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": ">=5.5.0 <5.9.0",
-        "illuminate/view": ">=5.5.0 <5.9.0",
-        "illuminate/container": ">=5.5.0 <5.9.0",
-        "illuminate/config": ">=5.5.0 <5.9.0",
+        "illuminate/support": ">=5.5.0 <5.9.0 || ~6.0",
+        "illuminate/view": ">=5.5.0 <5.9.0 || ~6.0",
+        "illuminate/container": ">=5.5.0 <5.9.0 || ~6.0",
+        "illuminate/config": ">=5.5.0 <5.9.0 || ~6.0",
         "tarampampam/wrappers-php": "^1.3"
     },
     "require-dev": {
-        "laravel/laravel": ">=5.5.0 <5.9.0",
+        "laravel/laravel": ">=5.5.0 <5.9.0 || ~6.0",
         "phpstan/phpstan": "^0.11.3",
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^6.4 || ~7.5"
