--- a/.travis.yml
+++ b/.travis.yml
@@ -35,42 +35,34 @@ after_success:
 
 matrix:
   include:
-    - language: node_js
-      cache:
-        yarn: true
-        directories:
-          - node_modules
-      node_js: stable
-      install:
-        - npm install -g codecov
-        - yarn install
-      script:
-        - yarn test-cover
-      after_success:
-        - codecov
-
     - php: 7.1.3
       env: setup=lowest
     - php: 7.1.3
-      env: laravel=5.6
+      env: laravel=5.5
     - php: 7.1.3
-      env: laravel=5.7
+      env: laravel=5.6
     - php: 7.1.3
       env: coverage=true
 
     - php: 7.2
       env: setup=lowest
     - php: 7.2
-      env: coverage=true
+      env: laravel=5.8
+    - php: 7.2
+      env: coverage=true laravel=6.*
 
     - php: 7.3
       env: setup=lowest
+    - php: 7.3
+      env: laravel=5.5
     - php: 7.3
       env: laravel=5.6
     - php: 7.3
       env: laravel=5.7
     - php: 7.3
-      env: coverage=true
+      env: laravel=5.8
+    - php: 7.3
+      env: coverage=true laravel=6.*
 
     - php: nightly
 
