--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,11 @@
 {
     "name": "avto-dev/back2front-laravel",
     "description": "Laravel package for sending data from backend to frontend over JavaScript object",
+    "keywords": [
+        "laravel",
+        "backend",
+        "frontend"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -10,34 +15,37 @@
         }
     ],
     "require": {
-        "php": ">=7.1.3",
+        "php": "^7.2",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": ">=5.5.0 <5.9.0 || ~6.0",
-        "illuminate/view": ">=5.5.0 <5.9.0 || ~6.0",
-        "illuminate/container": ">=5.5.0 <5.9.0 || ~6.0",
-        "illuminate/config": ">=5.5.0 <5.9.0 || ~6.0",
+        "illuminate/support": "^5.5 || ~6.0 || ~7.0",
+        "illuminate/view": "^5.5 || ~6.0 || ~7.0",
+        "illuminate/container": "^5.5 || ~6.0 || ~7.0",
+        "illuminate/config": "^5.5 || ~6.0 || ~7.0",
         "tarampampam/wrappers-php": "^1.3"
     },
     "require-dev": {
-        "laravel/laravel": ">=5.5.0 <5.9.0 || ~6.0",
-        "phpstan/phpstan": "^0.11.3",
-        "mockery/mockery": "^1.0",
+        "laravel/laravel": "^5.5 || ~6.0 || ~7.0",
+        "phpstan/phpstan": "~0.12",
+        "mockery/mockery": "^1.3",
         "phpunit/phpunit": "^6.4 || ~7.5"
     },
     "autoload": {
         "psr-4": {
-            "AvtoDev\\Back2Front\\": "src"
+            "AvtoDev\\Back2Front\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "AvtoDev\\Back2Front\\Tests\\": "tests/php"
+            "AvtoDev\\Back2Front\\Tests\\": "tests/php/"
         }
     },
-    "support": {
-        "issues": "https://github.com/avto-dev/back2front-laravel/issues",
-        "source": "https://github.com/avto-dev/back2front-laravel"
+    "extra": {
+        "laravel": {
+            "providers": [
+                "AvtoDev\\Back2Front\\ServiceProvider"
+            ]
+        }
     },
     "scripts": {
         "phpunit": "@php ./vendor/bin/phpunit --no-coverage --colors=always",
@@ -52,15 +60,8 @@
             "@phpunit-cover"
         ]
     },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "AvtoDev\\Back2Front\\ServiceProvider"
-            ]
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "prefer-stable": true
+    "support": {
+        "issues": "https://github.com/avto-dev/back2front-laravel/issues",
+        "source": "https://github.com/avto-dev/back2front-laravel"
+    }
 }
