--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "laravel/laravel": "^5.5 || ~6.0 || ~7.0",
         "phpstan/phpstan": "~0.12",
         "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^6.4 || ~7.5"
+        "phpunit/phpunit": "^6.4 || ~7.5 || ^8.5"
     },
     "autoload": {
         "psr-4": {
