--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,18 @@
     ],
     "require": {
         "php": "^7.2",
-        "ext-json": "*",
         "ext-mbstring": "*",
-        "illuminate/support": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/view": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/container": "^5.5 || ~6.0 || ~7.0",
-        "illuminate/config": "^5.5 || ~6.0 || ~7.0",
-        "tarampampam/wrappers-php": "^1.3"
+        "illuminate/support": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/view": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/container": "~6.0 || ~7.0 || ~8.0",
+        "illuminate/config": "~6.0 || ~7.0 || ~8.0",
+        "tarampampam/wrappers-php": "^1.3 || ~2.0"
     },
     "require-dev": {
-        "laravel/laravel": "^5.5 || ~6.0 || ~7.0",
+        "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
         "phpstan/phpstan": "~0.12",
         "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^6.4 || ~7.5"
+        "phpunit/phpunit": "^8.5.4 || ^9.3"
     },
     "autoload": {
         "psr-4": {
