--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.3 || ^8.0",
         "ext-mbstring": "*",
         "illuminate/support": "~6.0 || ~7.0 || ~8.0",
         "illuminate/view": "~6.0 || ~7.0 || ~8.0",
@@ -25,8 +25,8 @@
     },
     "require-dev": {
         "laravel/laravel": "~6.0 || ~7.0 || ~8.0",
-        "phpstan/phpstan": "~0.12",
-        "mockery/mockery": "^1.3",
+        "phpstan/phpstan": "~0.12.36",
+        "mockery/mockery": "^1.4",
         "phpunit/phpunit": "^8.5.4 || ^9.3"
     },
     "autoload": {
