--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,19 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "ext-mbstring": "*",
         "ext-json": "*",
-        "illuminate/support": "~9.0",
-        "illuminate/view": "~9.0",
-        "illuminate/container": "~9.0",
-        "illuminate/config": "~9.0"
+        "illuminate/support": "^10.0",
+        "illuminate/view": "^10.0",
+        "illuminate/container": "^10.0",
+        "illuminate/config": "^10.0"
     },
     "require-dev": {
-        "laravel/laravel": "~9.0",
-        "phpstan/phpstan": "~1.9",
-        "mockery/mockery": "^1.5.1",
-        "phpunit/phpunit": "^9.6"
+        "laravel/laravel": "^10.0",
+        "phpstan/phpstan": "~1.10",
+        "mockery/mockery": "^1.6",
+        "phpunit/phpunit": "^10.5"
     },
     "autoload": {
         "psr-4": {
