--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "ext-mbstring": "*",
         "ext-json": "*",
-        "illuminate/support": "^10.0 || ^11.0",
-        "illuminate/view": "^10.0 || ^11.0",
-        "illuminate/container": "^10.0 || ^11.0",
-        "illuminate/config": "^10.0 || ^11.0"
+        "illuminate/support": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/view": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/container": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/config": "^10.0 || ^11.0 || ^12.0"
     },
     "require-dev": {
-        "laravel/laravel": "^10.0 || ^11.0",
+        "laravel/laravel": "^10.0 || ^11.0 || ^12.0",
         "phpstan/phpstan": "^1.10.66",
         "mockery/mockery": "^1.6.5",
         "phpunit/phpunit": "^10.5"
